assets/css/style.css
/* ... */
.circles li:nth-child(10) {
  left: 85%;
  width: 150px;
  height: 150px;
  animation-delay: 0s;
  animation-duration: 11s;
}

@keyframes animate {
  0% {
    transform: translateY(0) rotate(0deg);
    opacity: 1;
    border-radius: 0;
  }

  100% {
    transform: translateY(-1000px) rotate(720deg);
    opacity: 0;
    border-radius: 50%;
  }
}
/* Footer*/
footer {
  background-color: #faf9f6;
  z-index: 1;
}
#social-networks {
  text-align: center;
  padding: 20px 0;
  display: flex;
  justify-content: space-evenly;
  list-style-type: none;
}
#social-networks a {
  font-size: 160%;
  padding: 5%;
  color: #283618;
  background-color: #faf9f6;
}

/* Media Query: small phone + (280px+) */
@media screen and (min-width: 280px) and (max-width: 575px) {
  #cover-text {
    top: 475px;
  }
  #product-container {
    display: flex;
    flex-direction: column;
  }
  iframe {
    width: 285px;
    height: 150px;
  }
  #services {
    height: 650px;
  }
  #contact-form {
    left: 20px;
  }
}
/* Media Query: normal size phone (320px +) */
@media screen and (min-width: 320px) {
  /* Services */
  #services {
    height: 580px;
  }
}
/* Media Query: medium size phone + (375px +) */
@media screen and (min-width: 375px) {
  /* Services */
  #services {
    height: 515px;
  }
}

/* Media query: large or landscape phones (576px +)*/
@media screen and (min-width: 576px) {
  /* Gallery */
  #photos {
    column-count: 2;
    column-gap: 0;
  }
}

/* Media query: tablets and larger (768px +) */
@media screen and (min-width: 768px) {
  /* Header */
  nav {
    display: block;
    position: relative;
    box-shadow: none;
    width: fit-content;
    /* padding-right: 1rem; */
  }
  #nav-bar {
    display: flex;
  }
  #nav-bar > li {
    padding-left: 1rem;
  }
  .nav-toggle-label {
    display: none;
  }
  #logo {
    font-size: 200%;
    line-height: 75px;
    margin: 0 0.5rem;
  }
  /* Main content */
  main {
    margin-top: 79px;
    background-color: #faf9f6;
  }
  /* main-photo */
  #cover-text {
    width: 300px;
    right: 10px;
    top: 550px;
  }
  #services {
    height: 400px;
  }
  /* Gallery */
  #photos {
    display: grid;
    background-image: linear-gradient(
      to bottom,
      #faf9f6,
      #c5c3b7,
      #8f907c,
      #5b6147,
      #283618
    );
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 0px;
  }
  #photos img {
    width: 100%;
    height: 75%;
    object-fit: cover;
  }
  /* Form */
  #contact {
    background-position: center;
    position: relative;
  }
  #contact-form {
    max-width: 400px;
    position: absolute;
    left: 190px;
    top: 50px;
  }
  .text-input:hover {
    border-color: #023304;
  }
  .join-button:hover {
    background-color: #fafafa;
    color: #454b1b;
  }
}

/* Large devices (laptops & desktops, 892px +) */
@media screen and (min-width: 822px) {
  /* Nav Bar */
  #nav-bar a:hover {
    border-bottom: 1px solid lightgrey;
  }
  /* Contact */
  #contact-form {
    left: 35%;
  }
  /* Main Photo */
  #cover-text {
    top: 550px;
  }
  /* Footer */
  #social-networks a:hover {
    color: white;
    background-color: #283618;
    border-radius: 50%;
  }
}
/* Larger devices (laptops & desktops, 1200px +) */
@media screen and (min-width: 1200px) {
  /* Services section */
  #circle-cover-bg {
    background: url(../images/Services.Image.jpg) no-repeat top center / cover;
    height: 90vw;
    width: 90vw;
    margin-top: 20px;
    /* Circle Services Section */
    border-radius: 50%;
    max-width: 300px;
    max-height: 300px;
  }
  .offer {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  #services-image {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  #services-0 {
    display: flex;
    flex-direction: row;
  }

  #services-0 > div {
    flex: 1;
  }

  #services-image {
    order: 0;
  }

  #services-2 {
    order: 1;
  }

  #services-2 > div {
    align-self: flex-start;
  }

  #services-1 > div {
    align-self: flex-end;
  }
  #services {
    padding: 0 5rem;
  }
  #about h2 {
    padding: 0 5rem;
  }
  #about p {
    padding: 0 5rem;
  }
}
/* Large devices 4k (laptops & desktops, 2560px +) */
@media screen and (min-width: 2560px) {
  /* Cover-Text */
  #cover-text {
    top: 450px;
  }
  /* Form */
  #contact {
    background-position: center;
    position: relative;
  }
  #contact-form {
    max-width: 650px;
    position: absolute;
    left: 950px;
    top: 50px;
  }
  .text-input:hover {
    border-color: #023304;
  }
  .join-button:hover {
    background-color: #fafafa;
    color: #454b1b;
  }
  #contact-form > h2 {
    font-size: 35px;
  }
  #contact-form > label {
    font-size: 25px;
  }
  .join-button {
    font-size: 25px;
  }
  input[type="text" i] {
    padding-block: 2px;
    padding-inline: 4px;
  }
  input[type="email" i] {
    padding-block: 2px;
    padding-inline: 4px;
  }
  /* Services */
  body {
    font-size: 125%;
  }
  #services {
    padding: 0 10rem;
  }
  /* About */
  #about h2 {
    padding: 0 10rem;
  }
  #about p {
    padding: 0 10rem;
  }
}

